# pybg

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt
cxx/include/pybg/: concepts.hpp  container.hpp  ndarray.hpp  utility.hpp  wkt.hpp
cxx/include/pybg/algorithm/: area.hpp  azimuth.hpp
cxx/include/pybg/cartesian/: concepts.hpp
cxx/include/pybg/cs/: cartesian.hpp  ecef.hpp  geographic.hpp  spherical.hpp
cxx/include/pybg/geographic/: concepts.hpp
cxx/include/pybg/pybind/: box.hpp  container.hpp  linestring.hpp  multilinestring.hpp  multipoint.hpp  multipolygon.hpp  point_2d.hpp  point_3d.hpp  polygon.hpp  ring.hpp  segment.hpp  spheroid.hpp
cxx/pybind/: area.cpp  cartesian.cpp  geographic.cpp  main.cpp  spherical.cpp  wkt.cpp
cxx/pybind/algorithm/: area.cpp  area.hpp  azimuth.cpp  azimuth.hpp  pybg_utils.h
cxx/pybind/concepts/: cartesian.cpp  cartesian.hpp  ecef.cpp  ecef.hpp  geographic.cpp  geographic.hpp  spherical.cpp  spherical.hpp
cxx/pybind/io/: wkt.cpp  wkt.hpp
